이미지처리에 관한 코드 개선